
  [ Roland Mas ]
  * Use standard Sort::Versions module to compare database schema version
    numbers rather than forking dpkg --compare-versions.
  * Rewritten SCM subsystem.  CVS and Subversion plugins have been cleaned
    up, and new plugins added: scmcpold (as a proof of concept), scmarch,
    scmbzr, scmdarcs, scmgit and scmhg.  Mercurial (scmhg) and Arch are
    not quite complete yet.

 -- Roland Mas <lolando@debian.org>  Wed, 23 Sep 2009 14:44:50 +0200

gforge (4.8.51-1) experimental; urgency=low

  * Fixed blackhole syntax for gforge-mta-exim4 so as not to require
    file_transport.
  * New extratabs plugin from Adullact.
  * New globalsearch plugin allowing to publish lists of projects for
    other forges and to search for projects in remote forges.
  * New projectlabels plugin from Adullact.
  * Packaging-related files are now stored in
    gforge/packaging/{dirs,install,cron.d,control}/* rather than the
    previous gforge/{dirs,install,cron.d,control}/*.
  * Read sys_urlprefix from gforge.conf and use it for local.inc and in
    the Apache config.  This makes it possible to run FusionForge as
    http://<hostname>/forge/ with unmodified packages.

 -- Roland Mas <lolando@debian.org>  Wed, 29 Apr 2009 15:21:31 +0200

gforge (4.8.1-1) unstable; urgency=low

  * New upstream release.
  * Fixed Postfix configuration for mailing lists.
  * Stop overwriting local config on upgrades for domain_name and
    server_admin.

 -- Roland Mas <lolando@debian.org>  Mon, 21 Sep 2009 08:53:35 +0200

gforge (4.8-3) unstable; urgency=low

  * New upstream snapshot as of SVN r7960.

 -- Roland Mas <lolando@debian.org>  Thu, 27 Aug 2009 10:47:54 +0200

gforge (4.8-2) unstable; urgency=low

  * Upload to Debian unstable, with a new upstream snapshot as of SVN
    r7945.

 -- Roland Mas <lolando@debian.org>  Thu, 06 Aug 2009 11:25:16 +0200

gforge (4.8-1) experimental; urgency=low

  * New upstream release.
