@@ -839,7 +839,7 @@ gforge/plugins/mediawiki/usr/share/mediawiki/skins/gforge/rtl.css -text
 gforge/plugins/mediawiki/usr/share/mediawiki/skins/gforge/user.gif -text
 gforge/plugins/mediawiki/usr/share/mediawiki/skins/gforge/wiki-indexed.png -text
 gforge/plugins/mediawiki/usr/share/mediawiki/skins/gforge/wiki.png -text
-gforge/plugins/mediawiki/www/index.php -text
+gforge/plugins/mediawiki/www/LocalSettings.php -text
 gforge/plugins/online_help/common/online_help-init.php -text
 gforge/plugins/online_help/common/online_helpPlugin.class.php -text
 gforge/plugins/online_help/www/ar01s01s01.html -text
@@ -3419,11 +3419,9 @@ gforge/www/plugins/eirc -text
 gforge/www/plugins/fckeditor -text
 gforge/www/plugins/helloworld -text
 gforge/www/plugins/mantis -text
-gforge/www/plugins/mediawiki -text
 gforge/www/plugins/online_help -text
 gforge/www/plugins/projects_hierarchy -text
 gforge/www/plugins/quota_management -text
-gforge/www/plugins/scmcvs -text
 gforge/www/plugins/svntracker -text
 gforge/www/plugins/webcalendar -text
 gforge/www/scm/browser.php -text
