@@ -4,3 +4,4 @@ usr/share/gforge/plugins/mediawiki/common
 usr/share/gforge/www/plugins/mediawiki
 usr/share/gforge/etc/httpd.d
 usr/share/mediawiki/skins
+var/lib/gforge/plugins/mediawiki/wikidata
