@@ -1,21 +1,19 @@
-Alias /mediawiki /var/lib/mediawiki
+AliasMatch ^/plugins/mediawiki/wiki/[-a-zA-Z0-9_]*/index.php /usr/share/gforge/www/plugins/mediawiki/index.php
+AliasMatch ^/plugins/mediawiki/wiki/([-a-zA-Z0-9_]*)/images/(.*) /var/lib/gforge/plugins/mediawiki/wikidata/$1/images/$2
+AliasMatch ^/plugins/mediawiki/wiki/([-a-zA-Z0-9_]*)/skins/(.*) /usr/share/mediawiki/skins/$2
 
-<Directory /var/lib/mediawiki/>
-	Options +FollowSymLinks
-	AllowOverride All
-	order allow,deny
-	allow from all
-	# Allow mediawiki to connect to gforge
-	Include /etc/gforge/httpd.secrets
-	php_admin_value include_path "/etc/gforge/custom:/etc/gforge:/usr/share/gforge:/usr/share/gforge/www/include:."
+<Directory /var/lib/gforge/plugins/mediawiki>
+        Options +FollowSymLinks
+        AllowOverride All
+        order allow,deny
+        allow from all
+        # Allow mediawiki to connect to gforge
+        Include /etc/gforge/httpd.secrets
+        php_admin_value include_path "/etc/gforge/custom:/etc/gforge:/usr/share/gforge:/usr/share/gforge/www/include:."
 </Directory>
 
 # some directories must be protected
-<Directory /var/lib/mediawiki/config>
-	Options -FollowSymLinks
-	AllowOverride None
-</Directory>
-<Directory /var/lib/mediawiki/upload>
-	Options -FollowSymLinks
-	AllowOverride None
-</Directory>
+<DirectoryMatch /var/lib/gforge/plugins/mediawiki/wikidata/[-a-zA-Z0-9_]*/upload>
+        Options -FollowSymLinks
+        AllowOverride None
+</DirectoryMatch>
