@@ -1,1 +1,0 @@
-../../plugins/mediawiki/www
